Fix weird wrapping on landing page at large resolutions

--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -28,6 +28,7 @@ $img_width: 924px;
 
     em {
       font-style: normal;
+      display: block;
     }
 
     .screenshot {
